--- a/package.json
+++ b/package.json
@@ -30,5 +30,5 @@
     "globals": "^15.14.0",
     "vite": "^6.0.5"
   },
-  "homepage": "https://sarahsalame.github.io/Blog"
+  "homepage": "https://sarahsalame.github.io/blog"
 }
